5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4350/executions/1649_2704.log
== TEST (2019-04-15 23:11:01) 
-- CODE:
a = float(input("nota"))
if a >= 6:
	print(a + a*10/100)
else:
	print(a)

-- OUTPUT:
5.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 23:11:05) 
-- CODE:
a = float(input("nota"))
if a >= 6:
	print(a + a*10/100)
else:
	print(a)

-- EXECUTION TIME:
0.143327
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
5.0
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
9.9
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
4.4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:13:14) 
-- CODE:
a = float(input("nota"))
b = input("sim ou nao")
if b = S:
	print(a + a*10/100)
else:
	print(a)

-- ERROR:
File "XXXX", line 3
    if b = S:
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:13:27) 
-- CODE:
a = float(input("nota"))
b = input("sim ou nao")
if b = ("S"):
	print(a + a*10/100)
else:
	print(a)

-- ERROR:
File "XXXX", line 3
    if b = ("S"):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:13:41) 
-- CODE:
a = float(input("nota"))
b = input("sim ou nao")
if b is ("S"):
	print(a + a*10/100)
else:
	print(a)

-- OUTPUT:
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:13:53) 
-- CODE:
a = float(input("nota"))
b = input("sim ou nao")
if b is ("S"):
	print(a + a*10/100)
else:
	print(a)

-- OUTPUT:
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 23:13:57) 
-- CODE:
a = float(input("nota"))
b = input("sim ou nao")
if b is ("S"):
	print(a + a*10/100)
else:
	print(a)

-- EXECUTION TIME:
0.303459
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
5.5
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
9.9
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
4.4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
